{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 6,
  "lineage": "d2d44ebb-12f4-f588-0416-d6f24b3fbb46",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "my_firewall_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-01-29T02:44:09.033-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-410313/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/networks/my-vpc",
            "priority": 1000,
            "project": "terraform-gcp-410313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/firewalls/allow-egress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "my_firewall_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-29T02:44:09.654-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-410313/global/firewalls/allow-ingress",
            "log_config": [],
            "name": "allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/networks/my-vpc",
            "priority": 1000,
            "project": "terraform-gcp-410313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/firewalls/allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/zones/us-central1-a/disks/my-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-410313/zones/us-central1-a/instances/my-instance",
            "instance_id": "3425869237885484974",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "VdVt_oWJtzg=",
            "metadata_startup_script": "echo \"Hello, this is a startup script!\"\n",
            "name": "my-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/networks/default",
                "network_ip": "10.128.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terraform-gcp-410313"
              }
            ],
            "project": "terraform-gcp-410313",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/zones/us-central1-a/instances/my-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-410313/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6197185263447982033",
            "project": "terraform-gcp-410313",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-29T02:44:10.225-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-gcp-410313/regions/us-central1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-410313",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-410313/regions/us-central1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    }
  ]
}